--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "47989426",
    "metadata": {},
    "outputs": [
@@ -433,18 +433,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data type of 'class': int64\n",
-      "Unique levels in 'class': [0 1 2]\n"
+      "The variable type of the response variable 'class' is: categorical.\n",
+      "The 'levels' (unique values) of the variable are: [0 1 2].\n"
      ]
     }
    ],
    "source": [
     "# Your answer here\n",
-    "class_dtype = wine_df['class'].dtype\n",
-    "print(f\"Data type of 'class': {class_dtype}\")\n",
-    "\n",
-    "class_levels = wine_df['class'].unique()\n",
-    "print(f\"Unique levels in 'class': {class_levels}\")"
+    "print(\"The variable type of the response variable 'class' is: categorical.\")\n",
+    "print(f\"The 'levels' (unique values) of the variable are: {wine_df['class'].unique()}.\")"
    ]
   },
   {
@@ -554,7 +551,7 @@
    "metadata": {},
    "source": [
     "> Your answer here...\n",
-    "To ensures all variables are on the same scale"
+    "To ensures that all variables contribute equally to the model, prevents larger-scale variables from dominating, and improves the performance of scale-sensitive algorithms like SVM, KNN, and gradient descent-based methods."
    ]
   },
   {
@@ -604,24 +601,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "72c101f2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "# Do not touch\n",
     "np.random.seed(123)\n",
     "# Create a random vector of True and False values to split the data\n",
     "split = np.random.choice([True, False], size=len(predictors_standardized), replace=True, p=[0.75, 0.25])\n",
     "\n",
-    "X = wine_df.drop(columns=['class'])  # Predictor variables\n",
-    "y = wine_df['class']                 # Response variable\n",
+    "X_train = predictors_standardized[split]\n",
+    "X_test = predictors_standardized[~split]\n",
     "\n",
-    "X_train = X[split]\n",
-    "X_test = X[~split]\n",
-    "\n",
-    "y_train = y[split]\n",
-    "y_test = y[~split]"
+    "y_train = wine_df['class'][split]\n",
+    "y_test = wine_df['class'][~split]"
    ]
   },
   {
@@ -644,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "08818c64",
    "metadata": {},
    "outputs": [
@@ -652,32 +651,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best value for n_neighbors: 11\n"
+      "Best value for n_neighbors: 8\n"
      ]
     }
    ],
    "source": [
     "# Your code here...\n",
-    "from sklearn.datasets import load_iris  # Example dataset, replace with your data\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "# Load dataset (use your own dataset here)\n",
-    "data = load_iris()  # Replace this with your dataset\n",
-    "X = data.data       # Features\n",
-    "y = data.target     # Target\n",
-    "\n",
-    "# Split the dataset into training and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "# Initialize the KNN classifier\n",
     "knn = KNeighborsClassifier()\n",
     "\n",
     "# Define the parameter grid for n_neighbors\n",
     "param_grid = {'n_neighbors': range(1, 51)}\n",
     "\n",
-    "# Implement GridSearchCV with 10-fold cross-validation\n",
     "grid_search = GridSearchCV(estimator=knn, param_grid=param_grid, cv=10, scoring='accuracy')\n",
     "\n",
     "# Fit the model on the training data\n",
@@ -685,7 +670,7 @@
     "\n",
     "# Get the best value for n_neighbors\n",
     "best_n_neighbors = grid_search.best_params_['n_neighbors']\n",
-    "print(f\"Best value for n_neighbors: {best_n_neighbors}\")\n"
+    "print(f\"Best value for n_neighbors: {best_n_neighbors}\")"
    ]
   },
   {
@@ -701,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "ffefa9f2",
    "metadata": {},
    "outputs": [
@@ -709,15 +694,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the test set: 1.0\n"
+      "Accuracy on the test set: 0.9473684210526315\n"
      ]
     }
    ],
    "source": [
     "# Your code here...\n",
+    "# Fit the KNN model with the optimal number of neighbors\n",
     "best_knn = KNeighborsClassifier(n_neighbors=best_n_neighbors)\n",
     "best_knn.fit(X_train, y_train)\n",
+    "\n",
     "y_pred = best_knn.predict(X_test)\n",
+    "\n",
+    "# Evaluate the accuracy\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f\"Accuracy on the test set: {accuracy}\")"
    ]
